// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenu renders successfully 1`] = `
<ul
  className="nav navbar-nav main-nav"
>
  <li
    className="link-dashboard"
  >
    <withCookies(Component)>
      <NavLink
        className="nav-link"
        to="/dashboard"
      >
        <span
          className="link-name"
        >
          my dashboard
        </span>
      </NavLink>
    </withCookies(Component)>
  </li>
  <li
    className="link-public"
  >
    <NavLink
      className="nav-link"
      to="/public/datasets"
    >
      <span
        className="link-name"
      >
        Public Dashboard
      </span>
    </NavLink>
  </li>
  <li
    className="link-support"
  >
    <a
      className="nav-link"
      onClick={[Function]}
    >
      <span
        className="link-name"
      >
        Support
      </span>
    </a>
  </li>
  <li
    className="link-faq"
  >
    <NavLink
      className="nav-link"
      to="/faq"
    >
      <span
        className="link-name"
      >
        faq
      </span>
    </NavLink>
  </li>
  <li
    className="link-admin"
  >
    <withCookies(Component) />
  </li>
  <li
    className="link-dashboard"
  >
    <withCookies(Component)>
      <Uploader />
    </withCookies(Component)>
  </li>
  <li>
    <NavbarCollapse>
      <withCookies(Component) />
      <withCookies(Component)>
        <div
          className="navbar-right sign-in-nav-btn"
        >
          <button
            className="btn-blue"
            onClick={[Function]}
          >
            <span>
              Sign in
            </span>
          </button>
        </div>
      </withCookies(Component)>
    </NavbarCollapse>
  </li>
</ul>
`;

exports[`NavMenu renders without "eventKey" warnings 1`] = `
<NavMenu
  isLoggedIn={null}
  loading={false}
>
  <ul
    className="nav navbar-nav main-nav"
  >
    <li
      className="link-dashboard"
    />
    <li
      className="link-public"
    >
      <NavLink
        className="nav-link"
        to="/public/datasets"
      />
    </li>
    <li
      className="link-support"
    >
      <a
        className="nav-link"
        onClick={[Function]}
      >
        <span
          className="link-name"
        >
          Support
        </span>
      </a>
    </li>
    <li
      className="link-faq"
    >
      <NavLink
        className="nav-link"
        to="/faq"
      />
    </li>
    <li
      className="link-admin"
    />
    <li
      className="link-dashboard"
    />
    <li>
      <NavbarCollapse>
        <Collapse
          dimension="height"
          getDimensionValue={[Function]}
          in={false}
          mountOnEnter={false}
          timeout={300}
          transitionAppear={false}
          unmountOnExit={false}
        >
          <Transition
            aria-expanded={null}
            className=""
            enteredClassName="collapse in"
            enteringClassName="collapsing"
            exitedClassName="collapse"
            exitingClassName="collapsing"
            in={false}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            transitionAppear={false}
            unmountOnExit={false}
          >
            <div
              aria-expanded={null}
              className="navbar-collapse collapse"
            >
              <SignIn
                loading={false}
              >
                <div
                  className="navbar-right sign-in-nav-btn"
                >
                  <button
                    className="btn-blue"
                    onClick={[Function]}
                  >
                    <span>
                      Sign in
                    </span>
                  </button>
                </div>
              </SignIn>
            </div>
          </Transition>
        </Collapse>
      </NavbarCollapse>
    </li>
  </ul>
</NavMenu>
`;
